manifest/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Admin Config</fullName>
        <description>Support Process for Admin Configuration Team</description>
        <isActive>true</isActive>
        <values>
            <fullName>Blocked</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Config Team Validation in Progress</fullName>
        </values>
        <values>
            <fullName>Hold</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Pending Information</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>QA Review In Progress</fullName>
        </values>
        <values>
            <fullName>Ready for Config Team Validation</fullName>
        </values>
        <values>
            <fullName>Ready for QA Review</fullName>
        </values>
        <values>
            <fullName>Ready for UAT</fullName>
        </values>
        <values>
            <fullName>Ready for Validation</fullName>
        </values>
        <values>
            <fullName>Ready to Start</fullName>
        </values>
        <values>
            <fullName>UAT in Progress</fullName>
        </values>
        <values>
            <fullName>Validation in Progress</fullName>
        </values>
        <values>
            <fullName>Waiting on Validation</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Business_Type__c</fullName>
        <formula>Text( Account.Account_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Business Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>Account.Account_Manager__r.FirstName + &apos; &apos; +  Account.Account_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Config_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admin Config Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases_Admin_Config_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Days_Since_Creation__c</fullName>
        <formula>(5 * ( FLOOR( ( TODAY() - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( TODAY() - DATE( 1900, 1, 8), 7 ) ) ) 
-
(5 * ( FLOOR( ( DATEVALUE(CreatedDate) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(CreatedDate) - DATE( 1900, 1, 8), 7 ) ) )</formula>
        <label>Business Days Since Creation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Region__c</fullName>
        <formula>Text(Account.Business_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correction_Details__c</fullName>
        <inlineHelpText>Describe why the mistake was made and any client impacts.</inlineHelpText>
        <label>Correction Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Correction__c</fullName>
        <label>Correction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Creator_Role__c</fullName>
        <description>DO NOT DELETE THIS FIELD - It is used to populate the &quot;Market Size&quot; field with a Workflow to prevent a change to that field when a Role changes for the Case creator.</description>
        <formula>CreatedBy.UserRole.Name</formula>
        <label>Creator Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Primary_Lives__c</fullName>
        <label>Estimated Primary Lives</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friendly_Account_Name__c</fullName>
        <formula>Account.Friendly_Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Friendly Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Comment__c</fullName>
        <label>Last Comment</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the former Account which got converted into Legacy Id on Master Account</description>
        <label>Legacy Id</label>
        <referenceTo>Legacy_Id__c</referenceTo>
        <relationshipLabel>Legacy Cases</relationshipLabel>
        <relationshipName>Legacy_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mapping_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mapping Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases_Mapping_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mapping_Required__c</fullName>
        <label>Mapping Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mapping_Status__c</fullName>
        <label>Mapping Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Mapping Information</fullName>
                    <default>true</default>
                    <label>Pending Mapping Information</label>
                </value>
                <value>
                    <fullName>Ready to Start Mapping</fullName>
                </value>
                <value>
                    <fullName>Mapping in Progress</fullName>
                </value>
                <value>
                    <fullName>Ready for Mapping QA Review</fullName>
                </value>
                <value>
                    <fullName>Mapping QA Review in Progress</fullName>
                </value>
                <value>
                    <fullName>Mapping Completed</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NASF_Group_Count__c</fullName>
        <description>Requested by Laura Melanson (SFDCHUB-2226) for use on the Operations Open Cases report.</description>
        <inlineHelpText>Enter number of groups affected, if an org is affected count it as one.</inlineHelpText>
        <label>Group Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Products_Services__c</fullName>
        <description>Identify what we are probably proposing</description>
        <label>Products / Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expert Medical Services</fullName>
                </value>
                <value>
                    <fullName>HealthiestYou</fullName>
                </value>
                <value>
                    <fullName>Licensed Platform</fullName>
                </value>
                <value>
                    <fullName>Livongo</fullName>
                </value>
                <value>
                    <fullName>Mental Health Care</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Primary Care</fullName>
                </value>
                <value>
                    <fullName>Telehealth Services</fullName>
                </value>
                <value>
                    <fullName>Virtual Care Optimization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QA_Completed_Date__c</fullName>
        <label>QA Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that is assigned to review the Admin Config Case</description>
        <label>QA Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases_Reviewed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Start_Date__c</fullName>
        <description>System will set the Date when status changes to QA Review</description>
        <inlineHelpText>System will set the Date when status changes to QA Review</inlineHelpText>
        <label>QA Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_for_Reprint__c</fullName>
        <label>Reason for Reprint</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Content error – client provided</fullName>
                </value>
                <value>
                    <fullName>Content error – Teladoc input</fullName>
                </value>
                <value>
                    <fullName>Pricing/product error – client supplied</fullName>
                </value>
                <value>
                    <fullName>Pricing/product error – Teladoc input</fullName>
                </value>
                <value>
                    <fullName>Client Request – New service added or pricing update</fullName>
                </value>
                <value>
                    <fullName>Client Request – Other (include reason in description field)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Case_Action_Type__c</fullName>
        <label>Secondary Case Action(Type)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Admin Related</fullName>
                </value>
                <value>
                    <fullName>Billing Related</fullName>
                </value>
                <value>
                    <fullName>Boost Sync</fullName>
                </value>
                <value>
                    <fullName>Comprehensive Audit</fullName>
                </value>
                <value>
                    <fullName>Eligibility Updates</fullName>
                </value>
                <value>
                    <fullName>Flow 1B</fullName>
                </value>
                <value>
                    <fullName>Logo Update</fullName>
                </value>
                <value>
                    <fullName>Marketing Communication Settings Update (Opt In/ Opt Out) Example: Direct Mail, Email, Incentive, Outbound Calls and Text</fullName>
                </value>
                <value>
                    <fullName>Migration</fullName>
                </value>
                <value>
                    <fullName>New Account Set-Up</fullName>
                </value>
                <value>
                    <fullName>New Groups AHH</fullName>
                </value>
                <value>
                    <fullName>New Groups Only</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Overrides</fullName>
                </value>
                <value>
                    <fullName>Price Update</fullName>
                </value>
                <value>
                    <fullName>Print setting (URL &amp; Phone Number) Update</fullName>
                </value>
                <value>
                    <fullName>Reporting Updates</fullName>
                </value>
                <value>
                    <fullName>Sales or Client Manager Update</fullName>
                </value>
                <value>
                    <fullName>Termination Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sent_to_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that tasks under this case have been transmitted to Admin.</description>
        <inlineHelpText>Indicates that tasks under this case have been transmitted to Admin.</inlineHelpText>
        <label>Sent to Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Id__c</fullName>
        <externalId>true</externalId>
        <label>Source Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WK_Change_Type__c</fullName>
        <label>WK Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Turn Welcome ON</fullName>
                </value>
                <value>
                    <fullName>Turn Welcome OFF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WK_OFF_Reason_Details__c</fullName>
        <label>WK OFF Reason Details</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>Admin_Config_User_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Sent_to_Admin__c</columns>
        <filterScope>Queue</filterScope>
        <label>Admin Config User Queue</label>
        <queue>Admin_Config_User_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Admin_Config</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Cases_in_QA_Review</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>QA_Reviewer__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>QA_Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Business_Days_Since_Creation__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>QA Review</value>
        </filters>
        <label>All Cases in QA Review</label>
    </listViews>
    <listViews>
        <fullName>LCRM_Build_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>LCRM Build Queue</label>
        <queue>LCRM_Build_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Migration_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Migration Queue</label>
        <queue>Migration_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>QA_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>QA Queue</label>
        <queue>QA_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Welcome_Kit_Card_Change_Requests</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.TYPE</columns>
        <columns>Last_Comment__c</columns>
        <columns>WK_Change_Type__c</columns>
        <columns>WK_OFF_Reason_Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Welcome Kit – Send Card Change Request</value>
        </filters>
        <label>Welcome Kit Card Change Requests</label>
    </listViews>
    <listViews>
        <fullName>Welcome_Kit_Other_Cases</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.TYPE</columns>
        <columns>Last_Comment__c</columns>
        <columns>WK_Change_Type__c</columns>
        <columns>WK_OFF_Reason_Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Welcome Kit – Other</value>
        </filters>
        <label>Welcome Kit - &quot;Other&quot; Cases</label>
    </listViews>
    <listViews>
        <fullName>Welcome_Kit_Reprints</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.TYPE</columns>
        <columns>Reason_for_Reprint__c</columns>
        <columns>Last_Comment__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Welcome Kit – Reprint Request</value>
        </filters>
        <label>Welcome Kit Reprints</label>
    </listViews>
    <recordTypes>
        <fullName>Admin_Config</fullName>
        <active>true</active>
        <businessProcess>Admin Config</businessProcess>
        <description>Record Type to support New Account Setup Cases</description>
        <label>Admin Config</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Correction_Details_Can_not_be_null</fullName>
        <active>true</active>
        <description>Correction Details can not be null, When Correction is selected as &apos;yes&apos;.</description>
        <errorConditionFormula>AND( ISPICKVAL(Correction__c,&apos;Yes&apos;) , ISBLANK(Correction_Details__c))</errorConditionFormula>
        <errorDisplayField>Correction_Details__c</errorDisplayField>
        <errorMessage>Correction Details can not be null, When Correction is selected as &apos;yes&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Description_required_for_Request_Other</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT( Reason_for_Reprint__c ) == &apos;Client Request – Other (include reason in description field)&apos;&amp;&amp; ISBLANK( Description )</errorConditionFormula>
        <errorDisplayField>Description</errorDisplayField>
        <errorMessage>Description is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QA_Reviewer_can_not_be_null</fullName>
        <active>true</active>
        <description>QA Reviewer can not be null when status is QA Review</description>
        <errorConditionFormula>AND(ISPICKVAL(Status,&apos;QA Review&apos;), ISBLANK(QA_Reviewer__c))</errorConditionFormula>
        <errorDisplayField>QA_Reviewer__c</errorDisplayField>
        <errorMessage>QA Reviewer can not be null when Case Status is QA Review</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WK_OFF_Reason_Details_required</fullName>
        <active>true</active>
        <description>If WK Change Type = Turn Welcome OFF, WK OFF Reason Details is required</description>
        <errorConditionFormula>TEXT(WK_Change_Type__c) == &apos;Turn Welcome OFF&apos;&amp;&amp;   ISBLANK(WK_OFF_Reason_Details__c )</errorConditionFormula>
        <errorDisplayField>WK_OFF_Reason_Details__c</errorDisplayField>
        <errorMessage>If WK Change Type is Turn Welcome OFF, WK OFF Reason Details is required</errorMessage>
    </validationRules>
</CustomObject>